项目名称改写

--- a/CNTS-admin/pom.xml
+++ b/CNTS-admin/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>CNTS</artifactId>
+        <artifactId>cnts</artifactId>
         <groupId>com.cnts</groupId>
         <version>3.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <artifactId>CNTS-admin</artifactId>
+    <artifactId>cnts-admin</artifactId>
 
     <description>
         web服务入口
@@ -46,19 +46,19 @@
         <!-- 核心模块-->
         <dependency>
             <groupId>com.cnts</groupId>
-            <artifactId>CNTS-framework</artifactId>
+            <artifactId>cnts-framework</artifactId>
         </dependency>
 
         <!-- 定时任务-->
         <dependency>
             <groupId>com.cnts</groupId>
-            <artifactId>CNTS-quartz</artifactId>
+            <artifactId>cnts-quartz</artifactId>
         </dependency>
 
         <!-- 代码生成-->
         <dependency>
             <groupId>com.cnts</groupId>
-            <artifactId>CNTS-generator</artifactId>
+            <artifactId>cnts-generator</artifactId>
         </dependency>
 
     </dependencies>
