--- a/CNTS-common/pom.xml
+++ b/CNTS-common/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>CNTS</artifactId>
+        <artifactId>cnts</artifactId>
         <groupId>com.cnts</groupId>
         <version>3.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>CNTS-common</artifactId>
+    <artifactId>cnts-common</artifactId>
 
     <description>
         common通用工具
