--- a/CNTS-framework/pom.xml
+++ b/CNTS-framework/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>CNTS</artifactId>
+        <artifactId>cnts</artifactId>
         <groupId>com.cnts</groupId>
         <version>3.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>CNTS-framework</artifactId>
+    <artifactId>cnts-framework</artifactId>
 
     <description>
         framework框架核心
@@ -56,7 +56,7 @@
         <!-- 系统模块-->
         <dependency>
             <groupId>com.cnts</groupId>
-            <artifactId>CNTS-system</artifactId>
+            <artifactId>cnts-system</artifactId>
         </dependency>
 
     </dependencies>
