--- a/CNTS-generator/pom.xml
+++ b/CNTS-generator/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>CNTS</artifactId>
+        <artifactId>cnts</artifactId>
         <groupId>com.cnts</groupId>
         <version>3.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>CNTS-generator</artifactId>
+    <artifactId>cnts-generator</artifactId>
 
     <description>
         generator代码生成
@@ -26,7 +26,7 @@
         <!-- 通用工具-->
         <dependency>
             <groupId>com.cnts</groupId>
-            <artifactId>CNTS-common</artifactId>
+            <artifactId>cnts-common</artifactId>
         </dependency>
 
         <!-- 阿里数据库连接池 -->
