--- a/CNTS-admin/src/main/resources/application.yml
+++ b/CNTS-admin/src/main/resources/application.yml
@@ -131,6 +131,6 @@ xss:
   # 过滤开关
   enabled: true
   # 排除链接（多个用逗号分隔）
-  excludes: /system/notice
+  excludes: /system/notice,/system/tickets,/system/tickets/*
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
